# cpputils

./: .gitignore  CMakeLists.txt  README.md
basement/: test_garbage.cpp
basement/rest/: Rest.cpp  Rest.h  RestServer.cpp  RestServer.h  RestTest.cpp  crow_all.h
build-ubuntu-clion-debug/.cmake/api/v1/reply/: cache-v2-5a70999a4c3e8850fbde.json  cmakeFiles-v1-bd81e864dd6ae548a9a8.json  codemodel-v2-ee6f01906191437131ae.json  index-2025-05-24T17-07-23-0210.json  toolchains-v1-1a98d9a1978a1b07ac34.json
build-ubuntu-clion-debug/tests/: dsj_utils_tests
cmake/: dsj_utilsConfig.cmake  dsj_utilsConfig.cmake.in
functional_containers/: CMakeLists.txt  README.md
functional_containers/header/: all_functional_containers.h.cpp  easy_array.h  easy_map.h  easy_set.h  easy_vector.h
functional_containers/tests/: CMakeLists.txt  test_easy_array.cpp  test_easy_map.cpp  test_easy_vector.cpp
src/: CMakeLists.txt
src/cpp/: Props.cpp  Rest.cpp  RestServer.cpp  TimeMetric.cpp  easy_array.cpp  easy_common.cpp  easy_map.cpp  easy_string.cpp  easy_timer.cpp  easy_vector.cpp  random_string.cpp  time_metrics.cpp
src/header/: Props.h  Rest.h  RestServer.h  TimeMetric.h  easy_array.h  easy_common.h  easy_map.h  easy_string.h  easy_timer.h  easy_vector.h  macros.h  props.h  random_string.h
src/tests/: CMakeLists.txt  EasyArray.cpp  EasyMapTest.cpp  EasyStringTest.cpp  EasyTimerTest.cpp  EasyVectorTest.cpp  MetricTest.cpp  RandomStringTest.cpp  RestTest.cpp  catch.hpp  test_easy_array.cpp  test_easy_map.cpp  test_easy_string.cpp  test_easy_timer.cpp  test_easy_vector.cpp  test_metric_test.cpp  test_random_string.cpp
string/: CMakeLists.txt
string/cpp/: easy_string.cpp  random_string.cpp
string/header/: random_string.h
string/tests/: CMakeLists.txt  test_easy_string.cpp  test_random_string.cpp
timer/: CMakeLists.txt
timer/cpp/: easy_timer.cpp
timer/header/: easy_timer.h  time_metrics.h
timer/tests/: CMakeLists.txt  test_easy_timer.cpp  test_metric_test.cpp
utils/: CMakeLists.txt
utils/cpp/: dummy.cpp
utils/tests/: CMakeLists.txt  test_hello_world.cpp
